--- a/index.html
+++ b/index.html
@@ -471,10 +471,10 @@ All of these, together with SAS data sets and macros for the course, are availab
 <P>
 <hr>
 <P>
-<EM> &#169 2014 Michael Friendly</EM>
+<EM> &#169 2014-- Michael Friendly</EM>
 
 <BR> 
-This URL is: <code>http://euclid.psych.yorku.ca/www/psy6136/</code>
+Canonical URL for this course is: <code>http://www.yorku.ca/friendly/psy6136</code>
 
 </body>
 </html>
