--- a/index.html
+++ b/index.html
@@ -272,16 +272,16 @@ To help me keep them straight, it would be most convenient to name them somethin
 </ul>
 
 <h2 id="evaluation">Evaluation</h2>
-<p>There are <del>three</del> two components to your evaluation in the course: two take-home projects (each worth <del>40%</del> 50%) that will involve analysis of one or more data sets together with a research report describing the background, your analyses, results and conclusions. For these, you can use any software you like, although R is strongly encouraged.</p>
+<p>There are three  components to your evaluation in the course: two take-home projects (each worth 40%) that will involve analysis of one or more data sets together with a research report describing the background, your analyses, results and conclusions. For these, you can use any software you like, although R is strongly encouraged.</p>
 <ol style="list-style-type: decimal">
-<li><p><a href="assign/project1.pdf">Project 1 </a>: a selection of data sets for the material up to and including logistic regression. Due date: TBA.</p></li>
+<li><p><a href="assign/project1.pdf">Project 1 </a>: a selection of data sets for the material up to and including logistic regression. Due date: Oct. 29</p></li>
 
-<li><p><a href="assign/project2.pdf">Project 2</a>: a selection of data sets for the material from logistic regression to the end of the course. Due date: TBA</p></li>
-<li><del>The remaining 20% can be earned either as
+<li><p><a href="assign/project2.pdf">Project 2</a>: a selection of data sets for the material from logistic regression to the end of the course. Due date: Dec. 15</p></li>
+<li>The remaining 20% can be earned either as
 <ol style="list-style-type: lower-alpha">
 <li>an assignment portfolio, containing a selection of your best work (possibly edited/enhanced) on a selection of assignment questions, or by</li>
-<li>reading and discussing a journal article related to theory or application of categorical data analysis. For the latter, you can volunteer to give a brief (~20 min) presentation to the class (sometime in Mar.) to earn bonus marks. Due date: Apr 7</li>
-</ol><del></del></li>
+<li>reading and discussing a journal article related to theory or application of categorical data analysis. For the latter, you can volunteer to give a brief (~15 min) presentation to the class (sometime in Nov.) to earn bonus marks. Due date: Dec. 29</li>
+</ol></li>
 </ol>
 
 <h3>Resources</h3>
@@ -352,6 +352,8 @@ including (among others):
    experiments.</li>
    <li><a href="http://www.cookbook-r.com/Graphs/">R Graphics Cookbook</a>, good book on graphics in R, with a useful web site
   containing lots of examples, particularly for <tt>ggplot2</tt></li>
+   <li><a href="http://www.datavis.ca/courses/RGraphics/">An Introduction to R Graphics</a> Notes from my SCS short course
+  on R Graphics. </li>
 </ul>
 </ul>
 
@@ -389,35 +391,6 @@ including (among others):
 </ul>
 </ul>  
  
-<h3><a name="assign">Assignments</a> </h3> 
-The items below give readings and problems for course assignments.
-<br>
-Problems denoted "MAP" come from:
-<cite>Matrix Algebra Problems with
-Applications in Psychology and Multivariate Analysis</cite> 
-<a href="assign/map/map.pdf">[PDF version]</a>
-<table>
-<tr valign=top>
-<td>
-<ul>
-<li><a href="assign/assign1.htm">Assignment 1</a>
-<li><a href="assign/assign2.htm">Assignment 2</a>
-<li><a href="assign/assign3.htm">Assignment 3</a>
-<li><a href="assign/assign4.htm">Assignment 4</a>
-<li><a href="assign/assign5.htm">Assignment 5</a>
-</ul>
-</td>
-<td>
-<ul>
-<li><a href="assign/assign6.htm">Assignment 6</a>
-<li><a href="assign/assign7.htm">Assignment 7</a>
-<li><a href="assign/assign8.htm">Assignment 8</a>
-<li><a href="assign/assign9.htm">Assignment 9</a>
-</ul>
-</td>
-</tr>
-</table>
-
 <h3><a name="project">Graded Projects</a></h3>
 <ul>
 <li>Matrix algebra (take-home)
