--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ containing data files, R scripts and a collection of web appendices on other top
   <tr>
     <td class="tg-week">1</td>
     <td class="tg-cxkv">Overview [<a href="lectures/Overview-handout.pdf">slides</a>] [<a href="lectures/Overview-2x2.pdf">4up</a>]</td>
-    <td class="tg-031e">DDAR: <a href="ClassOnly/VCDR/chapter01.pdf">Ch1</a>, <a href="ClassOnly/VCDR/chapter02.pdf">Ch2</a>; Agresti: Ch1</td>
+    <td class="tg-031e">DDAR: <a href="http://euclid.psych.yorku.ca/www/psy6136/ClassOnly/VCDR/chapter01.pdf">Ch1</a>, <a href="http://euclid.psych.yorku.ca/www/psy6136/ClassOnly/VCDR/chapter02.pdf">Ch2</a>; Agresti: Ch1</td>
 	<td class="tg-R">
 		<a href="tutorials/R-intro.R">R-into.R</a> [<a href="tutorials/R-intro.pdf"><img src="icons/knitR.png" alt="knitR" height="16" border="0"></a>]
 	</td>
@@ -136,7 +136,7 @@ containing data files, R scripts and a collection of web appendices on other top
   <tr>
     <td class="tg-week">2</td>
     <td class="tg-031e">Discrete distributions [<a href="lectures/Discrete-handout.pdf">slides</a>] [<a href="lectures/Discrete-2x2.pdf">4up</a>]</td>
-    <td class="tg-031e">DDAR: <a href="ClassOnly/VCDR/chapter03.pdf">Ch3</a> </td>
+    <td class="tg-031e">DDAR: <a href="http://euclid.psych.yorku.ca/www/psy6136/ClassOnly/VCDR/chapter03.pdf">Ch3</a> </td>
 		<td class="tg-R">
 		<a href="tutorials/R-data.R">R-data.R</a> 
 	    [<a href="tutorials/R-data.html"><img src="icons/knitR.png" alt="knitR" height="16" border="0"></a>]<br>
@@ -147,7 +147,7 @@ containing data files, R scripts and a collection of web appendices on other top
   <tr>
     <td class="tg-week">3</td>
     <td class="tg-031e">Two-Way Tables: Independence and Association [<a href="lectures/Twoway1-handout.pdf">slides</a>] [<a href="lectures/Twoway1-2x2.pdf">4up</a>]</td>
-    <td class="tg-031e">DDAR: <a href="ClassOnly/VCDR/chapter04.pdf">Ch4</a>; Agresti: Ch2</td>
+    <td class="tg-031e">DDAR: <a href="http://euclid.psych.yorku.ca/www/psy6136/ClassOnly/VCDR/chapter04.pdf">Ch4</a>; Agresti: Ch2</td>
 		<td class="tg-R">
 				<a href='R/berk-4fold.R'> berk-4fold.R</a>
 				[<a href='R/output/berk-4fold.html'><img src='icons/knitR.png' alt='knitR' height=16 border=0>] </a><br>
@@ -158,7 +158,7 @@ containing data files, R scripts and a collection of web appendices on other top
   <tr>
     <td class="tg-week">4</td>
     <td class="tg-031e">Two-Way Tables: Ordinal Data and Dependent Samples</td>
-    <td class="tg-031e">DDAR: <a href="ClassOnly/VCDR/chapter04.pdf">Ch4</a>; Agresti: Ch2</td>
+    <td class="tg-031e">DDAR: <a href="http://euclid.psych.yorku.ca/www/psy6136/ClassOnly/VCDR/chapter04.pdf">Ch4</a>; Agresti: Ch2</td>
 		<td class="tg-R">
 				<a href='R/msdiag-agree.R'> msdiag-agree.R</a>
 				[<a href='R/output/msdiag-agree.html'><img src='icons/knitR.png' alt='knitR' height=16 border=0>] </a>
@@ -168,7 +168,7 @@ containing data files, R scripts and a collection of web appendices on other top
     <td class="tg-week">5</td>
     <td class="tg-031e">Loglinear Models and Mosaic Displays [<a href="lectures/Loglin-handout.pdf">slides</a>] [<a href="lectures/Loglin-2x2.pdf">4up</a>]<br>
     	         [<a href="tutorials/loglin.pdf">Tutorial</a>] on loglin models </td>
-    <td class="tg-031e">DDAR: <a href="ClassOnly/VCDR/chapter05.pdf">Ch5</a>; Agresti: 2.7, Ch. 7</td>
+    <td class="tg-031e">DDAR: <a href="http://euclid.psych.yorku.ca/www/psy6136/ClassOnly/VCDR/chapter05.pdf">Ch5</a>; Agresti: 2.7, Ch. 7</td>
 		<td class="tg-R">
 				<a href='R/berkeley-glm.R'> berkeley-glm.R</a>
 				[<a href='R/output/berkeley-glm.html'><img src='icons/knitR.png' alt='knitR' height=16 border=0>] </a><br> 
@@ -179,7 +179,7 @@ containing data files, R scripts and a collection of web appendices on other top
   <tr>
     <td class="tg-week">6</td>
     <td class="tg-031e">Correspondence Analysis [<a href="lectures/Corresp-handout.pdf">slides</a>] [<a href="lectures/Corresp-2x2.pdf">4up</a>]</td>
-    <td class="tg-031e">DDAR: <a href="ClassOnly/VCDR/chapter06.pdf">Ch6</a></td>
+    <td class="tg-031e">DDAR: <a href="http://euclid.psych.yorku.ca/www/psy6136/ClassOnly/VCDR/chapter06.pdf">Ch6</a></td>
 		<td class="tg-R">
 				<a href='R/mental-ca.R'> mental-ca.R</a>
 				[<a href='R/output/mental-ca.html'><img src='icons/knitR.png' alt='knitR' height=16 border=0>] </a>
@@ -188,7 +188,7 @@ containing data files, R scripts and a collection of web appendices on other top
   <tr>
     <td class="tg-week">7</td>
     <td class="tg-031e">Logistic Regression I [<a href="lectures/Logistic-handout.pdf">slides</a>] [<a href="lectures/Logistic-2x2.pdf">4up</a>]</td>
-    <td class="tg-031e">DDAR: <a href="ClassOnly/VCDR/chapter07.pdf">7.1-7.3</a>; Agresti: 3.1-3.2; Ch 4</td>
+    <td class="tg-031e">DDAR: <a href="http://euclid.psych.yorku.ca/www/psy6136/ClassOnly/VCDR/chapter07.pdf">7.1-7.3</a>; Agresti: 3.1-3.2; Ch 4</td>
 		<td class="tg-R">
 				<a href='R/arthritis-logistic.R'> arthritis-logistic.R</a>
 				[<a href='R/output/arthritis-logistic.html'><img src='icons/knitR.png' alt='knitR' height=16 border=0>] </a> <br>
@@ -201,7 +201,7 @@ containing data files, R scripts and a collection of web appendices on other top
   <tr>
     <td class="tg-week">8</td>
     <td class="tg-031e">Logistic Regression II [<a href="lectures/Logistic2-handout.pdf">slides</a>] [<a href="lectures/Logistic-2x2.pdf">4up</a>]</td>
-    <td class="tg-031e">DDAR: <a href="ClassOnly/VCDR/chapter07.pdf">7.3-7.4</a>; Agresti: Ch 4-5</td>
+    <td class="tg-031e">DDAR: <a href="http://euclid.psych.yorku.ca/www/psy6136/ClassOnly/VCDR/chapter07.pdf">7.3-7.4</a>; Agresti: Ch 4-5</td>
 		<td class="tg-R">
 				<a href='R/cowles-effect.R'> cowles-effect.R</a>
 				[<a href='R/output/cowles-effect.html'><img src='icons/knitR.png' alt='knitR' height=16 border=0>] </a> <br>
@@ -215,7 +215,7 @@ containing data files, R scripts and a collection of web appendices on other top
   <tr>
     <td class="tg-week">9</td>
     <td class="tg-031e">Multinomial Logistic Regression [<a href="lectures/Logistic2-handout.pdf">slides</a>] [<a href="lectures/Logistic-2x2.pdf">4up</a>]</td>
-    <td class="tg-031e">DDAR: <a href="ClassOnly/VCDR/chapter07.pdf">7.5-7.6</a>; Agresti: Ch 6</td>
+    <td class="tg-031e">DDAR: <a href="http://euclid.psych.yorku.ca/www/psy6136/ClassOnly/VCDR/chapter07.pdf">7.5-7.6</a>; Agresti: Ch 6</td>
 		<td class="tg-R">
 				<a href='R/arthritis-propodds.R'> arthritis-propodds.R</a>
 				[<a href='R/output/arthritis-propodds.html'><img src='icons/knitR.png' alt='knitR' height=16 border=0>] </a> <br>
@@ -228,23 +228,23 @@ containing data files, R scripts and a collection of web appendices on other top
   <tr>
     <td class="tg-week">10</td>
     <td class="tg-031e">Log-Linear Models I [<a href="lectures/Loglin2-handout.pdf">slides</a>] [<a href="lectures/Loglin2-2x2.pdf">4up</a>]</td>
-    <td class="tg-031e">DDAR: <a href="ClassOnly/VCDR/chapter08.pdf">8.1-8.4</a>; Agresti: Ch 7</td>
+    <td class="tg-031e">DDAR: <a href="http://euclid.psych.yorku.ca/www/psy6136/ClassOnly/VCDR/chapter08.pdf">8.1-8.4</a>; Agresti: Ch 7</td>
   </tr>
   <tr>
     <td class="tg-week">11</td>
     <td class="tg-031e">Log-Linear Models II [<a href="lectures/Loglin2-handout.pdf">slides</a>] [<a href="lectures/Loglin2-2x2.pdf">4up</a>]</td>
-    <td class="tg-031e">DDAR: <a href="ClassOnly/VCDR/chapter08.pdf">8.5-8.11</a>; Agresti: Ch 8</td>
+    <td class="tg-031e">DDAR: <a href="http://euclid.psych.yorku.ca/www/psy6136/ClassOnly/VCDR/chapter08.pdf">8.5-8.11</a>; Agresti: Ch 8</td>
   </tr>
   <tr>
     <td class="tg-week">12</td>
     <td class="tg-031e">Generalized Linear Models: Poisson Regression</td>
-    <td class="tg-031e">DDAR: <a href="ClassOnly/VCDR/chapter09.pdf">9.1-9.4</a>; Agresti 3.3-3.5</td>
+    <td class="tg-031e">DDAR: <a href="http://euclid.psych.yorku.ca/www/psy6136/ClassOnly/VCDR/chapter09.pdf">9.1-9.4</a>; Agresti 3.3-3.5</td>
   </tr>
 <!--
   <tr>
     <td class="tg-week">13</td>
     <td class="tg-031e">Generalized Linear Models: Further topics</td>
-    <td class="tg-031e">DDAR: <a href="ClassOnly/VCDR/chapter09.pdf">9.5-9.7</a></td>
+    <td class="tg-031e">DDAR: <a href="http://euclid.psych.yorku.ca/www/psy6136/ClassOnly/VCDR/chapter09.pdf">9.5-9.7</a></td>
   </tr>
 -->
 </table>
