revised Discrete lecture

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ containing data files, R scripts and a collection of web appendices on other top
   </tr>
   <tr>
     <td class="tg-week">2</td>
-    <td class="tg-031e">Discrete distributions [<a href="lectures/Discrete-handout.pdf">slides</a>] [<a href="lectures/Discrete-2x2.pdf">4up</a>]</td>
+    <td class="tg-031e">Discrete distributions [<a href="lectures/Discrete-1up.pdf">slides</a>] [<a href="lectures/Discrete-4up.pdf">4up</a>]</td>
     <td class="tg-031e">DDAR: <a href="http://euclid.psych.yorku.ca/www/psy6136/ClassOnly/VCDR/chapter03.pdf">Ch3</a> </td>
 		<td class="tg-R">
 		<a href="tutorials/R-data.R">R-data.R</a> 
