--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ containing data files, R scripts and a collection of web appendices on other top
   </tr>
   <tr>
     <td class="tg-week">3</td>
-    <td class="tg-031e">Two-Way Tables: Independence and Association [<a href="lectures/Twoway1-handout.pdf">slides</a>] [<a href="lectures/Twoway1-2x2.pdf">4up</a>]</td>
+    <td class="tg-031e">Two-Way Tables: Independence and Association [<a href="lectures/Twoway1-1up.pdf">slides</a>] [<a href="lectures/Twoway1-4up.pdf">4up</a>]</td>
     <td class="tg-031e">DDAR: <a href="http://euclid.psych.yorku.ca/www/psy6136/ClassOnly/VCDR/chapter04.pdf">Ch4</a>; Agresti: Ch2</td>
 		<td class="tg-R">
 				<a href='R/berk-4fold.R'> berk-4fold.R</a>
