--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ To help me keep them straight, it would be most convenient to name them somethin
 </p>
 
 <ul>
-	<li><a href="assign/assign1.pdf">Assignment 1 </a> <!-- [<a href="assign/assn1.R">R solutions </a>] --></li>
+	<li><a href="assign/assign1.pdf">Assignment 1 </a> [<a href="assign/assn1.R">R solutions </a>] </li>
 	<li><a href="assign/assign2.pdf">Assignment 2 </a> <!-- [<a href="assign/assn2.R">R solutions </a>] --></li>
 	<li><a href="assign/assign3.pdf">Assignment 3 </a> <!-- [<a href="assign/assn3.R">R solutions </a>] --></li>
 	<li><a href="assign/assign4.pdf">Assignment 4 </a></li>
