add haireye-spineplot to index.html

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ containing data files, R scripts and a collection of web appendices on other top
     <td class="tg-031e">DDAR: <a href="http://euclid.psych.yorku.ca/www/psy6136/ClassOnly/VCDR/chapter04.pdf">Ch4</a>; Agresti: Ch2</td>
 		<td class="tg-R">
 				<a href='R/berk-4fold.R'> berk-4fold.R</a>
-				[<a href='R/output/berk-4fold.html'><img src='icons/knitR.png' alt='knitR' height=16 border=0>] </a><br>
+				[<a href='R/output/berk-4fold.html'><img src='icons/knitR.png' alt='knitR' height=16 border=0>] </a><br/>
 				<a href='R/vision-sieve.R'> vision-sieve.R</a>
 				[<a href='R/output/vision-sieve.html'><img src='icons/knitR.png' alt='knitR' height=16 border=0>] </a>
 		</td>
@@ -161,7 +161,9 @@ containing data files, R scripts and a collection of web appendices on other top
     <td class="tg-031e">DDAR: <a href="http://euclid.psych.yorku.ca/www/psy6136/ClassOnly/VCDR/chapter04.pdf">Ch4</a>; Agresti: Ch2</td>
 		<td class="tg-R">
 				<a href='R/msdiag-agree.R'> msdiag-agree.R</a>
-				[<a href='R/output/msdiag-agree.html'><img src='icons/knitR.png' alt='knitR' height=16 border=0>] </a>
+				[<a href='R/output/msdiag-agree.html'><img src='icons/knitR.png' alt='knitR' height=16 border=0>] </a><br/>
+				<a href='R/haireye-spineplot.R'> haireye-spineplot.R</a>
+				[<a href='R/output/haireye-spineplot.html'><img src='icons/knitR.png' alt='knitR' height=16 border=0>] </a>
 		</td>
   </tr>
   <tr>
