--- a/index.html
+++ b/index.html
@@ -157,7 +157,10 @@ containing data files, R scripts and a collection of web appendices on other top
   </tr>
   <tr>
     <td class="tg-week">4</td>
-    <td class="tg-031e">Two-Way Tables: Ordinal Data and Dependent Samples</td>
+    <td class="tg-031e">Two-Way Tables: Ordinal Data and Dependent Samples<br/>
+                        [<a href="tutorials/twoway.pdf">Tutorial</a>] on two-way tables 
+    </td>
+              
     <td class="tg-031e">DDAR: <a href="http://euclid.psych.yorku.ca/www/psy6136/ClassOnly/VCDR/chapter04.pdf">Ch4</a>; Agresti: Ch2</td>
 		<td class="tg-R">
 				<a href='R/msdiag-agree.R'> msdiag-agree.R</a>
@@ -168,8 +171,8 @@ containing data files, R scripts and a collection of web appendices on other top
   </tr>
   <tr>
     <td class="tg-week">5</td>
-    <td class="tg-031e">Loglinear Models and Mosaic Displays [<a href="lectures/Loglin-handout.pdf">slides</a>] [<a href="lectures/Loglin-2x2.pdf">4up</a>]<br>
-    	         [<a href="tutorials/loglin.pdf">Tutorial</a>] on loglin models </td>
+    <td class="tg-031e">Loglinear Models and Mosaic Displays [<a href="lectures/Loglin-handout.pdf">slides</a>] [<a href="lectures/Loglin-2x2.pdf">4up</a>]<br/>                         [<a href="tutorials/loglin.pdf">Tutorial</a>] on loglin models 
+    </td>
     <td class="tg-031e">DDAR: <a href="http://euclid.psych.yorku.ca/www/psy6136/ClassOnly/VCDR/chapter05.pdf">Ch5</a>; Agresti: 2.7, Ch. 7</td>
 		<td class="tg-R">
 				<a href='R/berkeley-glm.R'> berkeley-glm.R</a>
