--- a/index.html
+++ b/index.html
@@ -278,8 +278,10 @@ To help me keep them straight, it would be most convenient to name them somethin
 
 <h2 id="evaluation">Evaluation</h2>
 <p>There are three  components to your evaluation in the course: two take-home projects (each worth 40%) that will involve analysis of one or more data sets together with a research report describing the background, your analyses, results and conclusions. For these, you can use any software you like, although R is strongly encouraged.</p>
+<p>Here is a <a href="assign/RMarkdown-template.pdf">template for a markdown .Rmd file</a> you can use if you are working in RStudio and want to
+write in R markdown.</p>
 <ol style="list-style-type: decimal">
-<li><p><a href="assign/project1.pdf">Project 1 </a>: a selection of data sets for the material up to and including logistic regression. Due date: Oct. 29</p></li>
+<li><p><a href="assign/project1.pdf">Project 1 </a>: a selection of data sets for the material up to and including logistic regression. Due date: Nov. 3</p></li>
 
 <li><p><a href="assign/project2.pdf">Project 2</a>: a selection of data sets for the material from logistic regression to the end of the course. Due date: Dec. 15</p></li>
 <li>The remaining 20% can be earned either as
