--- a/index.html
+++ b/index.html
@@ -171,7 +171,10 @@ containing data files, R scripts and a collection of web appendices on other top
   </tr>
   <tr>
     <td class="tg-week">5</td>
-    <td class="tg-031e">Loglinear Models and Mosaic Displays [<a href="lectures/Loglin-1up.pdf">slides</a>] [<a href="lectures/Loglin-4up.pdf">4up</a>]<br/>                         [<a href="tutorials/loglin.pdf">Tutorial</a>] on loglin models 
+    <td class="tg-031e">Loglinear Models and Mosaic Displays [<a href="lectures/Loglin-1up.pdf">slides</a>] [<a href="lectures/Loglin-4up.pdf">4up</a>]<br/>                         
+                      [<a href="tutorials/loglin.pdf">Tutorial</a>] on loglin models;
+                      [<a href="lectures/mosanimate.pdf">Mosaic display animation</a>]
+    
     </td>
     <td class="tg-031e">DDAR: <a href="http://euclid.psych.yorku.ca/www/psy6136/ClassOnly/VCDR/chapter05.pdf">Ch5</a>; Agresti: 2.7, Ch. 7</td>
 		<td class="tg-R">
