--- a/index.html
+++ b/index.html
@@ -179,18 +179,20 @@ containing data files, R scripts and a collection of web appendices on other top
     <td class="tg-031e">DDAR: <a href="http://euclid.psych.yorku.ca/www/psy6136/ClassOnly/VCDR/chapter05.pdf">Ch5</a>; Agresti: 2.7, Ch. 7</td>
 		<td class="tg-R">
 				<a href='R/berkeley-glm.R'> berkeley-glm.R</a>
-				[<a href='R/output/berkeley-glm.html'><img src='icons/knitR.png' alt='knitR' height=16 border=0>] </a><br> 
+				[<a href='R/output/berkeley-glm.html'><img src='icons/knitR.png' alt='knitR' height=16 border=0>] </a><br/> 
 				<a href='R/titanic-loglin.R'> titanic-loglin.R</a>
 				[<a href='R/output/titanic-loglin.html'><img src='icons/knitR.png' alt='knitR' height=16 border=0>] </a>
 		</td>
   </tr>
   <tr>
     <td class="tg-week">6</td>
-    <td class="tg-031e">Correspondence Analysis [<a href="lectures/Corresp-handout.pdf">slides</a>] [<a href="lectures/Corresp-2x2.pdf">4up</a>]</td>
+    <td class="tg-031e">Correspondence Analysis [<a href="lectures/Corresp-1up.pdf">slides</a>] [<a href="lectures/Corresp-4up.pdf">4up</a>]</td>
     <td class="tg-031e">DDAR: <a href="http://euclid.psych.yorku.ca/www/psy6136/ClassOnly/VCDR/chapter06.pdf">Ch6</a></td>
 		<td class="tg-R">
 				<a href='R/mental-ca.R'> mental-ca.R</a>
-				[<a href='R/output/mental-ca.html'><img src='icons/knitR.png' alt='knitR' height=16 border=0>] </a>
+				[<a href='R/output/mental-ca.html'><img src='icons/knitR.png' alt='knitR' height=16 border=0>] </a><br/>
+				<a href='R/mca-presex3.R'> mca-presex3.R</a>
+				[<a href='R/output/mca-presex3.html'><img src='icons/knitR.png' alt='knitR' height=16 border=0>] </a>
 		</td>
   </tr>
   <tr>
