--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ To help me keep them straight, it would be most convenient to name them somethin
 <ul>
 	<li><a href="assign/assign1.pdf">Assignment 1 </a> [<a href="assign/ans1.R">R solutions </a>] </li>
 	<li><a href="assign/assign2.pdf">Assignment 2 </a> [<a href="assign/ans2.R">R solutions </a>] </li>
-	<li><a href="assign/assign3.pdf">Assignment 3 </a> <!-- [<a href="assign/ans3.R">R solutions </a>] --></li>
+	<li><a href="assign/assign3.pdf">Assignment 3 </a> [<a href="assign/ans3.R">R solutions </a>] </li>
 	<li><a href="assign/assign4.pdf">Assignment 4 </a></li>
 </ul>
 
