--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ containing data files, R scripts and a collection of web appendices on other top
   </tr>
   <tr>
     <td class="tg-week">7</td>
-    <td class="tg-031e">Logistic Regression I [<a href="lectures/Logistic-handout.pdf">slides</a>] [<a href="lectures/Logistic-2x2.pdf">4up</a>]</td>
+    <td class="tg-031e">Logistic Regression I [<a href="lectures/Logistic-1up.pdf">slides</a>] [<a href="lectures/Logistic-4up.pdf">4up</a>]</td>
     <td class="tg-031e">DDAR: <a href="http://euclid.psych.yorku.ca/www/psy6136/ClassOnly/VCDR/chapter07.pdf">7.1-7.3</a>; Agresti: 3.1-3.2; Ch 4</td>
 		<td class="tg-R">
 				<a href='R/arthritis-logistic.R'> arthritis-logistic.R</a>
