--- a/index.html
+++ b/index.html
@@ -197,8 +197,12 @@ containing data files, R scripts and a collection of web appendices on other top
   </tr>
   <tr>
     <td class="tg-week">7</td>
-    <td class="tg-031e">Logistic Regression I [<a href="lectures/Logistic-1up.pdf">slides</a>] [<a href="lectures/Logistic-4up.pdf">4up</a>]</td>
-    <td class="tg-031e">DDAR: <a href="http://euclid.psych.yorku.ca/www/psy6136/ClassOnly/VCDR/chapter07.pdf">7.1-7.3</a>; Agresti: 3.1-3.2; Ch 4</td>
+    <td class="tg-031e">Logistic Regression I [<a href="lectures/Logistic-1up.pdf">slides</a>] [<a href="lectures/Logistic-4up.pdf">4up</a>]<br/>
+                      [<a href="tutorials/logistic.pdf">Logistic regression tutorial</a>]
+    </td>
+    <td class="tg-031e">DDAR: <a href="http://euclid.psych.yorku.ca/www/psy6136/ClassOnly/VCDR/chapter07.pdf">7.1-7.3</a>; Agresti: 3.1-3.2; Ch 4
+    </td>
+    
 		<td class="tg-R">
 				<a href='R/arthritis-logistic.R'> arthritis-logistic.R</a>
 				[<a href='R/output/arthritis-logistic.html'><img src='icons/knitR.png' alt='knitR' height=16 border=0>] </a> <br>
