--- a/index.html
+++ b/index.html
@@ -198,11 +198,8 @@ containing data files, R scripts and a collection of web appendices on other top
   <tr>
     <td class="tg-week">7</td>
     <td class="tg-031e">Logistic Regression I [<a href="lectures/Logistic-1up.pdf">slides</a>] [<a href="lectures/Logistic-4up.pdf">4up</a>]<br/>
-<<<<<<< HEAD
                       [<a href="tutorials/logistic.pdf">Logistic regression tutorial</a>]
-=======
                       [<a href="tutorials/logistic.pdf">Tutorial</a>] on logistic regression
->>>>>>> 0626fbd11d0ddb24b67c46f7b11feb752af38983
     </td>
     <td class="tg-031e">DDAR: <a href="http://euclid.psych.yorku.ca/www/psy6136/ClassOnly/VCDR/chapter07.pdf">7.1-7.3</a>; Agresti: 3.1-3.2; Ch 4
     </td>
@@ -218,7 +215,7 @@ containing data files, R scripts and a collection of web appendices on other top
   </tr>
   <tr>
     <td class="tg-week">8</td>
-    <td class="tg-031e">Logistic Regression II [<a href="lectures/Logistic2-handout.pdf">slides</a>] [<a href="lectures/Logistic-2x2.pdf">4up</a>]</td>
+    <td class="tg-031e">Logistic Regression II [<a href="lectures/Logistic2-1up.pdf">slides</a>] [<a href="lectures/Logistic-4up.pdf">4up</a>]</td>
     <td class="tg-031e">DDAR: <a href="http://euclid.psych.yorku.ca/www/psy6136/ClassOnly/VCDR/chapter07.pdf">7.3-7.4</a>; Agresti: Ch 4-5</td>
 		<td class="tg-R">
 				<a href='R/cowles-effect.R'> cowles-effect.R</a>
