update Logistic2; fix Arrest-effects links

--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@ containing data files, R scripts and a collection of web appendices on other top
 		<td class="tg-R">
 				<a href='R/cowles-effect.R'> cowles-effect.R</a>
 				[<a href='R/output/cowles-effect.html'><img src='icons/knitR.png' alt='knitR' height=16 border=0>] </a> <br>
-				<a href='R/Arrests-effect.R'> Arrests-effect.R</a>
-				[<a href='R/output/Arrests-effect.html'><img src='icons/knitR.png' alt='knitR' height=16 border=0>] </a> <br>
+				<a href='R/Arrests-effects.R'> Arrests-effects.R</a>
+				[<a href='R/output/Arrests-effects.html'><img src='icons/knitR.png' alt='knitR' height=16 border=0>] </a> <br>
 				<a href='R/berkeley-diag.R'> berkeley-diag.R</a>
 				[<a href='R/output/berkeley-diag.html'><img src='icons/knitR.png' alt='knitR' height=16 border=0>] </a> <br>
 				
