--- a/index.html
+++ b/index.html
@@ -242,12 +242,12 @@ containing data files, R scripts and a collection of web appendices on other top
   </tr>
   <tr>
     <td class="tg-week">10</td>
-    <td class="tg-031e">Log-Linear Models I [<a href="lectures/Loglin2-handout.pdf">slides</a>] [<a href="lectures/Loglin2-2x2.pdf">4up</a>]</td>
+    <td class="tg-031e">Log-Linear Models I [<a href="lectures/Loglin2-1up.pdf">slides</a>] [<a href="lectures/Loglin2-4up.pdf">4up</a>]</td>
     <td class="tg-031e">DDAR: <a href="http://euclid.psych.yorku.ca/www/psy6136/ClassOnly/VCDR/chapter08.pdf">8.1-8.4</a>; Agresti: Ch 7</td>
   </tr>
   <tr>
     <td class="tg-week">11</td>
-    <td class="tg-031e">Log-Linear Models II [<a href="lectures/Loglin2-handout.pdf">slides</a>] [<a href="lectures/Loglin2-2x2.pdf">4up</a>]</td>
+    <td class="tg-031e">Log-Linear Models II [<a href="lectures/Loglin2-1up.pdf">slides</a>] [<a href="lectures/Loglin2-4up.pdf">4up</a>]</td>
     <td class="tg-031e">DDAR: <a href="http://euclid.psych.yorku.ca/www/psy6136/ClassOnly/VCDR/chapter08.pdf">8.5-8.11</a>; Agresti: Ch 8</td>
   </tr>
   <tr>
