add CountData lecture

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ containing data files, R scripts and a collection of web appendices on other top
   </tr>
   <tr>
     <td class="tg-week">12</td>
-    <td class="tg-031e">Generalized Linear Models: Poisson Regression</td>
+    <td class="tg-031e">Generalized Linear Models: Count Data[<a href="lectures/CountData-1up.pdf">slides</a>] [<a href="lectures/CountData-4up.pdf">4up</a>]</td>
     <td class="tg-031e">DDAR: <a href="http://euclid.psych.yorku.ca/www/psy6136/ClassOnly/VCDR/chapter09.pdf">9.1-9.4</a>; Agresti 3.3-3.5</td>
   </tr>
 <!--
