--- a/index.html
+++ b/index.html
@@ -254,14 +254,17 @@ containing data files, R scripts and a collection of web appendices on other top
     <td class="tg-week">12</td>
     <td class="tg-031e">Generalized Linear Models: Count Data[<a href="lectures/CountData-1up.pdf">slides</a>] [<a href="lectures/CountData-4up.pdf">4up</a>]</td>
     <td class="tg-031e">DDAR: <a href="http://euclid.psych.yorku.ca/www/psy6136/ClassOnly/VCDR/chapter09.pdf">9.1-9.4</a>; Agresti 3.3-3.5</td>
+		<td class="tg-R">
+				<a href='R/phdpubs.R'> phdpubs.R</a>
+				[<a href='R/output/phdpubs.html'><img src='icons/knitR.png' alt='knitR' height=16 border=0>] </a>
   </tr>
-<!--
+
   <tr>
     <td class="tg-week">13</td>
     <td class="tg-031e">Generalized Linear Models: Further topics</td>
     <td class="tg-031e">DDAR: <a href="http://euclid.psych.yorku.ca/www/psy6136/ClassOnly/VCDR/chapter09.pdf">9.5-9.7</a></td>
   </tr>
--->
+
 </table>
 
 <h3><a name="assign">Assignments</h3>
