--- a/index.html
+++ b/index.html
@@ -197,9 +197,9 @@ containing data files, R scripts and a collection of web appendices on other top
   </tr>
   <tr>
     <td class="tg-week">7</td>
-    <td class="tg-031e">Logistic Regression I [<a href="lectures/Logistic-1up.pdf">slides</a>] [<a href="lectures/Logistic-4up.pdf">4up</a>]<br/>
+    <td class="tg-031e">Logistic Regression I [<a href="lectures/Logistic-1up.pdf">slides</a>] [<a href="lectures/Logistic-4up.pdf">4up</a>]
+    <br/>
                       [<a href="tutorials/logistic.pdf">Logistic regression tutorial</a>]
-                      [<a href="tutorials/logistic.pdf">Tutorial</a>] on logistic regression
     </td>
     <td class="tg-031e">DDAR: <a href="http://euclid.psych.yorku.ca/www/psy6136/ClassOnly/VCDR/chapter07.pdf">7.1-7.3</a>; Agresti: 3.1-3.2; Ch 4
     </td>
@@ -252,11 +252,17 @@ containing data files, R scripts and a collection of web appendices on other top
   </tr>
   <tr>
     <td class="tg-week">12</td>
-    <td class="tg-031e">Generalized Linear Models: Count Data[<a href="lectures/CountData-1up.pdf">slides</a>] [<a href="lectures/CountData-4up.pdf">4up</a>]</td>
+    <td class="tg-031e">Generalized Linear Models: Count Data[<a href="lectures/CountData-1up.pdf">slides</a>] [<a href="lectures/CountData-4up.pdf">4up</a>]
+    <br/>
+                          [<a href="tutorials/count-data.pdf">Count data GLMs tutorial</a>]
+
+    </td>
     <td class="tg-031e">DDAR: <a href="http://euclid.psych.yorku.ca/www/psy6136/ClassOnly/VCDR/chapter09.pdf">9.1-9.4</a>; Agresti 3.3-3.5</td>
 		<td class="tg-R">
 				<a href='R/phdpubs.R'> phdpubs.R</a>
-				[<a href='R/output/phdpubs.html'><img src='icons/knitR.png' alt='knitR' height=16 border=0>] </a>
+				[<a href='R/output/phdpubs.html'><img src='icons/knitR.png' alt='knitR' height=16 border=0>] </a><br>
+				<a href='R/quine.R'> quine.R</a>
+				[<a href='R/output/quine.html'><img src='icons/knitR.png' alt='knitR' height=16 border=0>] </a>
   </tr>
 
   <tr>
