update index.html, new icon

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@ Psychology 6136: Categorical Data Analysis
 <body>
 
 <h1><center>
-<img  width=48 height=48 src="icons/Mosaics.gif" align="absmiddle" alt="Mosaics" hspace=6>
+<img  height=60 src="icons/psy6136.png" align="absmiddle" alt="Mosaics" hspace=6>
 Psychology 6136: Categorical Data Analysis
-<img  width=48 height=48 src="icons/Mosaics.gif" align="absmiddle" alt="Mosaics" hspace=6>
+<img  height=60 src="icons/psy6136.png" align="absmiddle" alt="Mosaics" hspace=6>
 </center>
 </h1>
 
@@ -55,8 +55,6 @@ Psychology 6136: Categorical Data Analysis
 <h2>Text books and readings</h2>
 <table>
 <TD><IMG src="icons/ddar-cover.png" height="120" align="left" border="0" hspace="5" alt="Discrete Data Analysis with R">
-<TD><a href="http://books.google.com/books?id=eG0phz62f1cC"><IMG src="icons/vcd-cover.jpg" height="120" align="left" border="0" hspace="5"
-alt="Visualizing Categorical Data"></a>
 <TD><a href="http://books.google.com/books?id=OG9Eqwd0Fh4C"><IMG src="icons/agresti-intro.jpg" height="120" align="left" border="0" hspace="5"></a>
 
 <TD><a href="http://books.google.com/books?id=hpEzw4T0sPUC"><IMG src="icons/agresti-cover.jpg" height="120" align="left" border="0" hspace="5"></a>
