--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@ Psychology 6136: Categorical Data Analysis
 </ul>
 
 <li><strong> Class meetings: </strong>
-	 Thursday, 2:30 am - 5:30 pm, 204 BSB, lab session: 4:30-5:30, Hebb lab, 159
-	 BSB. The first class will be on <strong>Sep. 7</strong>.
+	 Tues, 2:30 am - 5:30 pm, 204 BSB, lab session: 4:30-5:30, Hebb lab, 159
+	 BSB. The first class will be on <strong>Jan. 10</strong>.
 </ul> 
 
 
@@ -59,13 +59,9 @@ Psychology 6136: Categorical Data Analysis
 
 <TD><a href="http://books.google.com/books?id=hpEzw4T0sPUC"><IMG src="icons/agresti-cover.jpg" height="120" align="left" border="0" hspace="5"></a>
 
-<!--
-<TD><a href="http://books.google.com/books?id=7acdFD_eX24C"><IMG src="icons/christensen-cover.jpg" height="120" hspace="5" align="left" border="0"></a>
-<TD><a href="http://books.google.com/books?id=JcOcTfRYCn4C"><IMG src="icons/stokes-davis-koch-cover-small.jpg" height="120" hspace="5" align="left" border="0"></a>
--->
 <TD><a href="http://r4ds.had.co.nz/"><IMG src="icons/r4ds.png" height="120" hspace="5" align="left" border="0"></a>
-<TD><a href="http://books.google.com/books?id=GKkn3LSSHFsC"><IMG src="icons/Fox-APR2nd.jpg" height="120" hspace="5" align="left" border="0"></a>
-<TD><a href="http://books.google.com/books?id=YH6NotdvzF0C"><IMG src="icons/fox-Companion2e.jpg" height="120" hspace="5" align="left" border="0"></a>
+<TD><a href="https://us.sagepub.com/en-us/nam/applied-regression-analysis-and-generalized-linear-models/book237254"><IMG src="icons/Fox-APR3rd.jpg" height="120" hspace="5" align="left" border="0"></a>
+<TD><a href="https://www.amazon.ca/COMPANION-APPLIED-REGR-ESSION/dp/1544336470/"><IMG src="icons/fox-Companion3e.jpg" height="120" hspace="5" align="left" border="0"></a>
 </TR>
 </table>
 
@@ -88,14 +84,14 @@ The main texts for this course are
     There is also a manual for 
 	<a href="https://home.comcast.net/~lthompson221/Splusdiscrete2.pdf">R and S-plus users</a>
 	to accompany this text.</li>
-<li>Fox, John. <a href="http://books.google.com/books?id=GKkn3LSSHFsC"><cite>Applied Regression Analysis and Generalized Linear Models</cite></a>, 2nd Ed.
-Sage, 2008.  An excellent text on linear models; Part IV on Generalized Linear Models provides a clear and comprehensive discussion.
+<li>Fox, John. <a href="https://us.sagepub.com/en-us/nam/applied-regression-analysis-and-generalized-linear-models/book237254"><cite>Applied Regression Analysis and Generalized Linear Models</cite></a>, 3rd Ed.
+Sage, 2015.  An excellent text on linear models; Part IV on Generalized Linear Models provides a clear and comprehensive discussion.
 </li>
 <li>Grolemund &amp; Wickham, <a href="http://r4ds.had.co.nz/"><cite>R for Data Science</cite></a> A good tutorial book on the
 tidyverse approach to data analysis in R.  Available free online.</li>
 <li>
-Fox & Weisberg <a href="http://books.google.com/books?id=YH6NotdvzF0C"><cite>An R Companion to Applied Regression</cite></a>,
-2nd Ed., Sage, 2011.  There is also a <a href="http://socserv.socsci.mcmaster.ca/jfox/Books/Companion/">web page for the book</a>,
+Fox & Weisberg <a href="https://www.amazon.ca/COMPANION-APPLIED-REGR-ESSION/dp/1544336470/"><cite>An R Companion to Applied Regression</cite></a>,
+3rd Ed., Sage, 2018.  There is also a <a href="http://socserv.socsci.mcmaster.ca/jfox/Books/Companion/">web page for the book</a>,
 containing data files, R scripts and a collection of web appendices on other topics.
 </li>
 </ul>
@@ -287,9 +283,15 @@ To help me keep them straight, it would be most convenient to name them somethin
 </p>
 
 <ul>
-	<li><a href="assign/assign1.pdf">Assignment 1 </a> [<a href="assign/ans1.R">R solutions </a>] </li>
-	<li><a href="assign/assign2.pdf">Assignment 2 </a> [<a href="assign/ans2.R">R solutions </a>] </li>
-	<li><a href="assign/assign3.pdf">Assignment 3 </a> [<a href="assign/ans3.R">R solutions </a>] </li>
+	<li><a href="assign/assign1.pdf">Assignment 1 </a> 
+	[<a href="assign/ans1.R">R solutions </a>] 
+	</li>
+	<li><a href="assign/assign2.pdf">Assignment 2 </a> 
+	[<a href="assign/ans2.R">R solutions </a>] 
+	</li>
+	<li><a href="assign/assign3.pdf">Assignment 3 </a> 
+	[<a href="assign/ans3.R">R solutions </a>] 
+	</li>
 	<li><a href="assign/assign4.pdf">Assignment 4 </a></li>
 </ul>
 
@@ -329,38 +331,16 @@ You are well-advised to download and install these to your computer so you can f
 	<li> <a href="http://www.rstudio.com/">R Studio</a>  is a powerful front-end for R, much more convenient than the standard R GUI.
 	Among other features, it offers integrated tools for help, plotting, history and the ability to run an R script to obtain a
 	HTML, PDF or Word document containing your input and output.
+<!--
 	<li>If you insist on SAS or SPSS, see  <a href="http://www.yorku.ca/computing/facultystaff/software/grouplicense/index.php"> 
 	York group licenses for SAS and SPSS</a> 
 	<br>You may also be able to use the 
 	<a href="http://www.yorku.ca/computing/facultystaff/labs/webacadlabs/">Web Acadlabs service</a>
 	to access SAS, SPSS from home.  See <li><a href="webacadlabs.pdf">Accessing software remotely using Web Acadlabs</a> by Manolo Romero.
-	
-</ul>
-
-<!--
-
-<h4>Computing Guides</h4>
-<ul>
-	<li>SAS OnlineDoc, V9 The SAS Online Documentation
-
-<ul>
-<li><a href="http://support.sas.com/onlinedoc/913/docMainpage.jsp"> SAS OnlineDoc, V9.1.3</a> 
-</ul>
-
-	
-<li>Local <a href="../sas/index.htm">SAS Information Guides</a>
-including (among others): 
-<ul> 
-<li> <a href="../sas/sas4win.htm">Introduction to SAS for Windows</a>,
-<li> <a href="http://www.utexas.edu/cc/stat/tutorials/sas8/sas8.html">SAS V8 for Windows Tutorial</a> (from University of Texas)
-<li> <a href="../sas/introsas.htm">Introduction to SAS </a>, 
-<li> overview of 
-<a href="../sas/sasprog.htm">SAS Procedures and Programming Statements</a>,
-<LI><A HREF="basetut.htm">Exploring the Baseball data with SAS/INSIGHT</li>
-<li><a href="../sas/iml.htm">Introduction to SAS/IML</a> -- the Interactive Matrix Language.
-</ul>
-
 -->
+	
+</ul>
+
 <li>R software guides
 <ul>
 	<li>Getting started: <a href="http://cran.r-project.org/doc/contrib/Torfs+Brauer-Short-R-Intro.pdf">
@@ -381,92 +361,6 @@ including (among others):
 </ul>
 </ul>
 
-<!--
-<h4>Methods Notes, and Bibliographies</h4>
-<ul>
-<li>Matrix algebra
-	<ul>
-	<li><a href="http://www.ee.ic.ac.uk/hp/staff/dmb/matrix/intro.html">Matrix Algebra Reference Manual</a> (by Mike Brooks, Imperial College)
-	<li><a href="matprep.htm">Mathematical preparation (matrix algebra) for the course.</a>
-</ul>
-<li><a href="books614.htm">Annotated list of multivariate texts</a>
-<li>Regression and linear models
-	<ul>
-	<li><a href="lrabib.htm">Regression Analysis bibliography</a>
-	<li><a href="http://psych.wisc.edu/henriques/mediator.html">
-	Mediator vs. Moderator variables</a>
-	</ul>
-<li>Factor analysis and Structural equation modeling
-	<ul>
-	<li><a href="fa/facoutln.htm">Factor Analysis Outline</a>
-	<li><a href="fa/factorbi.htm">Annotated bibliography on Factor Analysis and Structural Equation Modeling</a>
-	<li>notes on <a href="fa/facplan.htm">Planning a Factor Analytic Study</a>
-	<li>Ed Rigdon's <a href="http://www.gsu.edu/~mkteer/semfaq.html">Structural Equation Models FAQ</a> 
-	<li>Jason Newcomb's <a href="http://www.ioa.pdx.edu/newsom/semrefs.htm">Structural Equation Modeling Reference List
-	</a>  (journal articles and chapters on structural equation models), 
-	more up-to-date than my Annotated bib.
-	<li>A discussion of <a href="http://www.gsu.edu/~mkteer/power.html">Statistical Power in Structural Equation Models</a> by
-	David Kaplan
-	</ul>
-<li>MDS
-	<ul>
-	<li> a <a href="mds/mdsoutln.htm">Multidimensional Scaling Outline</a>
-	<li> a <a href="mds/mdsbib.htm">Multidimensional Scaling bibliography</a>
-</ul>
-</ul>  
- 
-<h3><a name="project">Graded Projects</a></h3>
-<ul>
-<li>Matrix algebra (take-home)
-<li>Research critique: 
-	<ul>
-	<li><a href="blaze.htm">Silver Blaze Problems in Regression</a>
-	<li><a href="py614bib.pdf">Bibliography of research studies</a>
-	</ul>
-<li>Data analysis project
-<ul>
-<li><a href="bb/basecall.htm">Hotelling Society: Call for Papers</a>
-<li><a href="bb/basedata.htm">Hotelling Society: Dataset description</a>
-<LI><A HREF="basetut.htm">Exploring the Baseball data with SAS/INSIGHT</li>
-<li><a href="bb/basepapr.htm">Hotelling Society: Specifications for Proceedings Papers</a>
-<LI><A HREF="bb/joe.jpg">Who is this man? Why isn't he laughing?</li>
-</ul>
-<li><a href="assign/assign10.htm">Final data analysis project</a>
-</ul>
-
-<h3><a name="sas"><img src="../images/sas.gif" align=absmiddle hspace=4>SAS Examples</a> </h3>
-There is a large library of 
-<a href="programs.htm">SAS examples</a>, grouped into the following categories.
-Most now have the printed and graphical output on corresponding web pages.
-
-All of these, together with SAS data sets and macros for the course, are available in a single ZIP file, 
-<a href="http://www.psych.yorku.ca/friendly/lab/files/psy6140.zip"><tt>psy6140.zip</tt></a>.
-
-<table>
-<tr valign=top>
-<td>
-<ul>
-<LI><A HREF="ex/screen.htm">Data Screening</li>
-<LI><A HREF="ex/iml.htm">Matrix Algebra with SAS/IML</A>
-<LI><A HREF="ex/regress.htm">Regression analysis</A>
-<LI><A HREF="ex/glm.htm">General Linear Models</A>
-<LI><A HREF="ex/cancorr.htm">Canonical correlation, Discriminant analysis</A>
-</ul>
-</td>
-<td>
-<ul>
-<LI><a HREF="ex/logistic.htm">Logistic Regression</a>
-<LI><A HREF="ex/factor.htm">Factor Analysis</A>
-<LI><A HREF="ex/cluster.htm">Clustering and scaling</A> 
-<li><a href="mds/mdsxmpl.htm">MDS and Cluster analysis</a>
-
-<LI><A HREF="ex/macros.htm">SAS macro programs</A>
-<LI><A HREF="ex/data.htm">Data sets</A>
-</ul>
-</td>
-</tr>
-</table>
--->
 
 <P>
 <hr>
