work on index.html

--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@ Psychology 6136: Categorical Data Analysis
 
 <h2>Text books and readings</h2>
 <table>
-<TD><IMG src="icons/ddar-cover.png" height="120" align="left" border="0" hspace="5" alt="Discrete Data Analysis with R">
-<TD><a href="http://books.google.com/books?id=OG9Eqwd0Fh4C"><IMG src="icons/agresti-intro.jpg" height="120" align="left" border="0" hspace="5"></a>
+<TD><a href="https://www.taylorfrancis.com/books/mono/10.1201/b19022/discrete-data-analysis-michael-friendly-david-meyer"><IMG src="icons/ddar-cover.png" height="120" align="left" border="0" hspace="5" alt="Discrete Data Analysis with R"></a>
+<TD><a href="http://books.google.com/books?id=OG9Eqwd0Fh4C"><IMG src="icons/agresti-intro-3rd.jpg", height="120" align="left" border="0" hspace="5"></a>
 
-<TD><a href="http://books.google.com/books?id=hpEzw4T0sPUC"><IMG src="icons/agresti-cover.jpg" height="120" align="left" border="0" hspace="5"></a>
+<TD><a href="http://books.google.com/books?id=hpEzw4T0sPUC"><IMG src="icons/agresti-cover-3rd.jpg" height="120" align="left" border="0" hspace="5"></a>
 
-<TD><a href="http://r4ds.had.co.nz/"><IMG src="icons/r4ds.png" height="120" hspace="5" align="left" border="0"></a>
 <TD><a href="https://us.sagepub.com/en-us/nam/applied-regression-analysis-and-generalized-linear-models/book237254"><IMG src="icons/Fox-APR3rd.jpg" height="120" hspace="5" align="left" border="0"></a>
 <TD><a href="https://www.amazon.ca/COMPANION-APPLIED-REGR-ESSION/dp/1544336470/"><IMG src="icons/fox-Companion3e.jpg" height="120" hspace="5" align="left" border="0"></a>
+<TD><a href="http://r4ds.had.co.nz/"><IMG src="icons/r4ds.png" height="120" hspace="5" align="left" border="0"></a>
 </TR>
 </table>
 
@@ -69,7 +69,7 @@ Psychology 6136: Categorical Data Analysis
 <p>
 The main texts for this course are
 <ul>
-	<li>Friendly, M. and Meyer, D. (2016). <cite>Discrete Data Analysis with R: Visualization and Modeling Techniques for Categorical and Count Data </cite></a>. 
+	<li>Friendly, M. and Meyer, D. (2016). <cite><a href="https://www.taylorfrancis.com/books/mono/10.1201/b19022/discrete-data-analysis-michael-friendly-david-meyer">Discrete Data Analysis with R: Visualization and Modeling Techniques for Categorical and Count Data </cite></a>. 
 	Chapman &amp; Hall. ISBN 9781498725835.
 	Web site for book: <a href="http://ddar.datavis.ca">ddar.datavis.ca</a>
 	<li>Agresti, A. (2007).
