--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ Psychology 6136: Categorical Data Analysis
 </ul>
 
 <li><strong> Class meetings: </strong>
-	 Tues, 2:30 am - 5:30 pm, 204 BSB, lab session: 4:30-5:30, Hebb lab, 159
+	 Tues, 2:30 am - 5:30 pm, 014A BSB, lab session: 4:30-5:30, Hebb lab, 159
 	 BSB. The first class will be on <strong>Jan. 10</strong>.
 </ul> 
 
