update README, ... add VCDR/

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@ Psychology 6136: Categorical Data Analysis
 <body>
 
 <h1><center>
-<img  height=60 src="icons/psy6136.png" align="absmiddle" alt="Mosaics" hspace=6>
+<img  height=75 src="icons/psy6136.png" align="absmiddle" alt="Mosaics" hspace=6>
 Psychology 6136: Categorical Data Analysis
-<img  height=60 src="icons/psy6136.png" align="absmiddle" alt="Mosaics" hspace=6>
+<img  height=75 src="icons/psy6136.png" align="absmiddle" alt="Mosaics" hspace=6>
 </center>
 </h1>
 
@@ -67,7 +67,7 @@ Psychology 6136: Categorical Data Analysis
 
 <h4>Main texts</h4>
 <p>
-The main texts for this course are
+The main texts for this course are:
 <ul>
 	<li>Friendly, M. and Meyer, D. (2016). <cite><a href="https://www.taylorfrancis.com/books/mono/10.1201/b19022/discrete-data-analysis-michael-friendly-david-meyer">Discrete Data Analysis with R: Visualization and Modeling Techniques for Categorical and Count Data </cite></a>. 
 	Chapman &amp; Hall. ISBN 9781498725835.
