work on resources.Rmd

--- a/index.html
+++ b/index.html
@@ -72,15 +72,16 @@ The main texts for this course are:
 	<li>Friendly, M. and Meyer, D. (2016). <cite><a href="https://www.taylorfrancis.com/books/mono/10.1201/b19022/discrete-data-analysis-michael-friendly-david-meyer">Discrete Data Analysis with R: Visualization and Modeling Techniques for Categorical and Count Data </cite></a>. 
 	Chapman &amp; Hall. ISBN 9781498725835.
 	Web site for book: <a href="http://ddar.datavis.ca">ddar.datavis.ca</a>
-	<li>Agresti, A. (2007).
-	<cite><a href="http://books.google.com/books?id=OG9Eqwd0Fh4C">Introduction to Categorical Data Analysis</a></cite>, 2nd ed., NY: Wiley. ISBN  9780470114742.
+	<li>Agresti, A. (2019).
+	<cite><a href="http://books.google.com/books?id=OG9Eqwd0Fh4C">Introduction to Categorical Data Analysis</a></cite>, 3rd ed., NY: Wiley. ISBN  ISBN: 978-1-119-40528-3.
 </ul>
 
 <h4>Supplementary readings:</h4>
 
 <ul>
-<li>Agresti, A. (2013). <a href="http://www.stat.ufl.edu/~aa/cda/cda.html"><cite>Categorical Data Analysis</cite></a>, 
+<li>Agresti, A. (2013). <a href="https://www.wiley.com/en-us/Categorical+Data+Analysis,+3rd+Edition-p-9780470463635"><cite>Categorical Data Analysis</cite></a>, 
 3rd ed., NY: Wiley.  A much more technical book, that many consider the "bible" for categorical data analysis methods.
+    <a href="http://www.stat.ufl.edu/~aa/cda/cda.html">Web site for the book</a>.
     There is also a manual for 
 	<a href="https://home.comcast.net/~lthompson221/Splusdiscrete2.pdf">R and S-plus users</a>
 	to accompany this text.</li>
