add favicon; update resources

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <title>
 Psychology 6136: Categorical Data Analysis
 </title>
-<link rel="stylesheet" href="doc.css" type="text/css">
-<link rel="stylesheet" href="tabs-menu.css" type="text/css">
+<link rel="stylesheet" href="assets/doc.css" type="text/css">
+<link rel="stylesheet" href="assets/tabs-menu.css" type="text/css">
 <!-- Author: Michael Friendly York University  Copyright 1999 -->
 </head>
 <body>
@@ -122,7 +122,9 @@ containing data files, R scripts and a collection of web appendices on other top
 
   <tr>
     <td class="tg-week">1</td>
-    <td class="tg-cxkv">Overview [<a href="lectures/01-Overview.pdf">slides</a>] [<a href="lectures/01-Overview-2x2.pdf">4up</a>]</td>
+    <td class="tg-cxkv">Overview [<a href="lectures/01-Overview.pdf">slides</a>] [<a href="lectures/01-Overview-2x2.pdf">4up</a>]<br>
+                        [<a href="lectures/RStudio.pdf">Working with R Studio</a>] [<a href="lectures/RStudio-2x2.pdf">4up</a>]
+    </td>
     <td class="tg-031e">DDAR: 
     <a href="VCDR/chapter01.pdf">Ch1</a>,
     <a href="VCDR/chapter02.pdf">Ch2</a>; 
